--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -4,6 +4,10 @@
   padding: 0;
 }
 body {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 4000;
+    font-style: normal;
+    background-color: #4a627f;
 }
 .visually-hidden {
   display: none;
