--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,31 +7,24 @@
 @import "global/scaffolding.scss";
 
 @import "blocks/page-header.scss";
+@import "blocks/page-main.scss";
+@import "blocks/burger-btn.scss";
 @import "blocks/main-nav.scss";
-@import "blocks/page-content";
-@import "blocks/beginning-index.scss";
-@import "blocks/downloads.scss";
-@import "blocks/welcome.scss";
-@import "blocks/advantages.scss";
-@import "blocks/research.scss";
-@import "blocks/reviews.scss";
-@import "blocks/comment.scss";
-@import "blocks/tariffs.scss";
-@import "blocks/contacts.scss";
-@import "blocks/map.scss";
-@import "blocks/page-footer.scss";
-@import "blocks/description.scss";
-@import "blocks/form.scss";
-@import "blocks/form-group.scss";
-@import "blocks/radio.scss";
-@import "blocks/checkbox.scss";
-@import "blocks/btn.scss";
-@import "blocks/photos.scss";
-@import "blocks/photo.scss";
-@import "blocks/photo-editor.scss";
-@import "blocks/link.scss";
-@import "blocks/social.scss";
-@import "blocks/copyright.scss";
-@import "blocks/svg-icon.scss";
-@import "blocks/control.scss";
-@import "blocks/logo.scss";
+@import "blocks/user-block.scss";
+@import "blocks/column.scss";
+@import "blocks/row.scss";
+@import "blocks/main-menu.scss";
+@import "blocks/social-block.scss";
+@import "blocks/facebook-block.scss";
+@import "blocks/twitter-block.scss";
+@import "blocks/sign-in-block.scss";
+@import "blocks/newsletter-block.scss";
+@import "blocks/slider-block.scss";
+@import "blocks/post.scss";
+@import "blocks/calendar-block.scss";
+@import "blocks/news-feed-block.scss";
+@import "blocks/question-block.scss";
+@import "blocks/quote-block.scss";
+@import "blocks/tabs-block.scss";
+@import "blocks/twitter-feed-block.scss";
+@import "blocks/view-stories-block.scss";
