--- a/sass/blocks/social-block.scss
+++ b/sass/blocks/social-block.scss
@@ -1,3 +1,31 @@
 .social-block{
+    width: 100%;
     height: 314px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 28px;
+    padding-right: 28px;
+    background-color: #fff;
+}
+.social-block__link{
+    display: block;
+    font-size: 16px;
+    text-decoration: none;
+    margin-bottom: 24px;
+    color: #475055;
+}
+.social-block__icon{
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    margin-right: 20px;
+    vertical-align: middle;
+    text-align: center;
+    border-radius: 50%;
+    fill: #fff;
+    background-color: #c5cdd1;
+}
+.social-block__text{
+
 }
