--- a/sass/blocks/newsletter-block.scss
+++ b/sass/blocks/newsletter-block.scss
@@ -1,6 +1,42 @@
 .newsletter-block{
     width: 100%;
     height: 166px;
+    padding: 25px;
     background-color: #fff;
-    outline: 1px solid red;
+}
+.newsletter-block__title{
+    font-size: 22px;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.newsletter-block__text{
+    font-size: 14px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+.newsletter-block__form{
+    display: flex;
+    height: 39px;
+}
+.newsletter-block__input{
+    flex-grow: 1;
+    margin-right: 14px;
+    padding-left: 18px;
+    padding-right: 18px;
+    font-size: 16px;
+    font-weight: 300;
+    border: 1px solid #dde2e4;
+    border-radius: 2px;
+}
+.newsletter-block__btn{
+    width: 97px;
+    font-size: 15px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #ea6060;
+    border: none;
+    border-radius: 3px;
+    outline: none;
 }
