--- a/sass/blocks/sign-in-block.scss
+++ b/sass/blocks/sign-in-block.scss
@@ -1,9 +1,8 @@
 .sign-in-block{
     width: 100%;
     height: 166px;
-    padding-top: 25px;
+    padding: 25px;
     background-color: #fff;
-    outline: 1px solid red;
 }
 .sign-in-block__title{
     font-size: 22px;
