feat: Add style to main-menu block

--- a/sass/global/icon.scss
+++ b/sass/global/icon.scss
@@ -45,4 +45,45 @@
         width: 24px;
         height: 24px;
     }
+    &_home{
+        width: 25px;
+        height: 22px;
+    }
+    &_shop{
+        width: 22px;
+        height: 22px;
+    }
+    &_note{
+        width: 23px;
+        height: 23px;
+    }
+    &_users{
+        width: 26px;
+        height: 16px;
+    }
+    &_trophy{
+        width: 26px;
+        height: 22px;
+    }
+    &_info{
+        width: 24px;
+        height: 24px;
+    }
+    &_email{
+        width: 24px;
+        height: 16px;
+    }
+    &_phone{
+        width: 24px;
+        height: 24px;
+    }
+    &_pointer{
+        width: 18px;
+        height: 24px;
+    }
+    &_arrow{
+        width: 20px;
+        height: 20px;
+        fill-rule: evenodd;
+    }
 }
