--- a/sass/blocks/main-menu.scss
+++ b/sass/blocks/main-menu.scss
@@ -1,4 +1,35 @@
 .main-menu{
+    display: flex;
     width: 100%;
-    height: 680px;
+    height: 673px;
+}
+.main-menu__column{
+    width: 100%;
+    background-color: #fff;
+}
+.main-menu__submenu{
+}
+.main-menu__list{
+    list-style: none;
+    margin: auto;
+    padding: 0;
+}
+.main-menu__link{
+    display: block;
+    height: 61px;
+    line-height: 60px;
+    padding-left: 18px;
+    font-size: 16px;
+    text-decoration: none;
+    border-bottom: 1px solid #e1e5e7;
+    color: #475055;
+    fill: #c5cdd1;
+    &:hover{
+        color: #fff;
+        background-color: #56ccc8;
+        fill: #fff;
+    }
+}
+.main-menu__icon{
+    margin-right: 22px;
 }
