--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,8 @@
 @import "blocks/column.scss";
 @import "blocks/row.scss";
 @import "blocks/main-menu.scss";
+@import "blocks/contacts.scss";
+@import "blocks/submenu.scss";
 @import "blocks/social-block.scss";
 @import "blocks/facebook-block.scss";
 @import "blocks/twitter-block.scss";
