--- a/sass/blocks/slider-block.scss
+++ b/sass/blocks/slider-block.scss
@@ -1,5 +1,120 @@
 .slider-block{
+    position: relative;
     width: 100%;
     height: 450px;
     outline: 1px solid red;
+    overflow: hidden;
+}
+.slide-block__radio{
+    display: none;
+}
+.slider-block__list{
+    display: flex;
+    transition: 0.3s;
+}
+.slider-block__slide{
+    width: 100%;
+    height: 450px;
+    flex-shrink: 0;
+    padding-left: 60px;
+    padding-top: 45px;
+    padding-right: 60px;
+    padding-bottom: 45px;
+    color: #fff;
+    background-color: #787878;
+}
+.slider-block__title{
+    font-size: 46px;
+    font-weight: 300;
+    margin-bottom: 30px;
+}
+.slide-block__text{
+    width: 360px;
+    font-size: 14px;
+    font-weight: 100;
+    margin-bottom: 30px;
+}
+.slide-block__btn{
+    display: block;
+    width: 172px;
+    height: 52px;
+    line-height: 50px;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+}
+.slider-block__toggles{
+    position: absolute;
+    bottom: 25px;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+}
+.slider-block__toggle{
+    display: block;
+    width: 12px;
+    height: 12px;
+    margin-right: 6px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    cursor: pointer;
+    &:last-of-type{
+        margin-right: 0;
+    }
+}
+.slider-block__arrow{
+    position: absolute;
+    top: calc(50% - 26px);
+    display: block;
+    width: 34px;
+    height: 52px;
+    background-color: #fff;
+    cursor: pointer;
+    &::before{
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -8px;
+        transform: rotate(45deg) ;
+        display: block;
+        width: 16px;
+        height: 16px;
+        border: 4px solid #585858;
+        border-radius: 2px;
+    }
+    &_left{
+        left: 0;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        &::before{
+            margin-left: -5px;
+            border-right-color: transparent;
+            border-top-color: transparent;
+        }
+    }
+    &_right{
+        right: 0;
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+        &::before{
+            margin-left: -10px;
+            border-left-color: transparent;
+            border-bottom-color: transparent;
+        }
+    }
+}
+@for $i from 1 through 4{
+  #slide-block-radio-#{$i}:checked ~ .slider-block__toggles [for="slide-block-radio-#{$i}"]{
+    background-color: #fff;
+  }
+  $shift: -100% * ($i - 1);
+  #slide-block-radio-#{$i}:checked ~ .slider-block__list{
+      transform: translate($shift);
+  }
 }
