--- a/sass/global/icon.scss
+++ b/sass/global/icon.scss
@@ -86,4 +86,24 @@
         height: 20px;
         fill-rule: evenodd;
     }
+    &_video{
+        width: 20px;
+        height: 13px;
+    }
+    &_photo{
+        width: 19px;
+        height: 14px;
+    }
+    &_heart{
+        width: 32px;
+        height: 30px;
+    }
+    &_clock{
+        width: 32px;
+        height: 32px;
+    }
+    &_share{
+        width: 32px;
+        height: 29px;
+    }
 }
