--- a/sass/blocks/news-feed-block.scss
+++ b/sass/blocks/news-feed-block.scss
@@ -1,5 +1,78 @@
 .news-feed-block{
     width: 100%;
-    height: 534px;
-    outline: 1px solid red;
+    height: 535px;
+    background-color: #fff;
+}
+.news-feed-block__radio{
+    display: none;
+}
+.news-feed-block__header{
+    display: flex;
+    align-items: center;
+    height: 65px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #475055;
+    border-bottom: 1px solid #dde2e4;
+}
+.news-feed-block__title{
+    font-size: 24px;
+    font-weight: 500;
+}
+.news-feed-block__toggles{
+    display: flex;
+    margin-left: auto;
+}
+.news-feed-block__toggle{
+    display: block;
+    width: 13px;
+    height: 13px;
+    margin-left: 6px;
+    border: 1px solid #a3abaf;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.3s;
+}
+@for $i from 1 through 3 {
+    #news-feed-block-radio-#{$i}:checked ~ .news-feed-block__header [for="news-feed-block-radio-#{$i}"]{
+        background-color: #a3abaf;
+    }
+}
+.news-feed-block__list{
+    list-style: none;
+    margin: auto;
+    padding: 0;
+    height: 470px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.news-feed-block__item{
+    display: flex;
+    height: 90px;
+    padding-left: 17px;
+    padding-right: 15px;
+    padding-top: 9px;
+    padding: 10px;
+}
+.news-feed-block__image{
+    flex-shrink: 0;
+    margin-right: 15px;
+    background-color: #787878;
+}
+.news-feed-block__wrapper{
+    display: flex;
+    flex-direction: column;
+}
+.news-feed-block__link{
+    text-decoration: none;
+    color: #475055;
+}
+.news-feed-block__text{
+    font-size: 16px;
+    font-weight: 500;
+}
+.news-feed-block__time{
+    margin-top: auto;
+    font-size: 14px;
+    font-weight: 100;
 }
