--- a/sass/blocks/question-block.scss
+++ b/sass/blocks/question-block.scss
@@ -1,5 +1,40 @@
 .question-block{
     width: 100%;
     height: 382px;
-    outline: 1px solid red;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #fff;
+}
+.question-block__title{
+    font-size: 24px;
+    font-weight: 500;
+    padding-bottom: 20px;
+}
+.question-block__input{
+    width: 100%;
+    height: 39px;
+    line-height: 37px;
+    margin-bottom: 18px;
+    padding-left: 18px;
+    padding-right: 18px;
+    border: 1px solid #dde2e4;
+    border-radius: 3px;
+    &_textarea{
+        height: 107px;
+        resize: none;
+    }
+}
+.question-block__btn{
+    width: 97px;
+    height: 39px;
+    line-height: 39px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    background-color: #ea6060;
+    border-radius: 3px;
+    border: none;
+    outline: none;
 }
