--- a/sass/blocks/main-menu.scss
+++ b/sass/blocks/main-menu.scss
@@ -24,6 +24,7 @@
     border-bottom: 1px solid #e1e5e7;
     color: #475055;
     fill: #c5cdd1;
+    transition: 0.3s;
     &:hover{
         color: #fff;
         background-color: #56ccc8;
