--- a/sass/blocks/slider-block.scss
+++ b/sass/blocks/slider-block.scss
@@ -62,6 +62,7 @@
     margin-right: 6px;
     border: 1px solid #fff;
     border-radius: 50%;
+    transition: 0.3s;
     cursor: pointer;
     &:last-of-type{
         margin-right: 0;
