--- a/sass/global/icon.scss
+++ b/sass/global/icon.scss
@@ -86,6 +86,11 @@
         height: 20px;
         fill-rule: evenodd;
     }
+    &_arrow_big{
+        width: 34px;
+        height: 34px;
+        fill-rule: evenodd;
+    }
     &_video{
         width: 20px;
         height: 13px;
@@ -105,5 +110,9 @@
     &_share{
         width: 32px;
         height: 29px;
+    }
+    &_quote{
+        width: 17px;
+        height: 16px;
     }
 }
