--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,6 +29,7 @@
 @import "blocks/question-block.scss";
 @import "blocks/quote-block.scss";
 @import "blocks/tabs-block.scss";
+@import "blocks/tabs-team.scss";
 @import "blocks/twitter-feed-block.scss";
 @import "blocks/view-stories-block.scss";
 
