--- a/sass/blocks/tabs-block.scss
+++ b/sass/blocks/tabs-block.scss
@@ -1,5 +1,40 @@
 .tabs-block{
     width: 100%;
     height: 292px;
-    outline: 1px solid red;
+    outline: 1px solid yellow;
+}
+.tabs-block__radio{
+    display: none;
+}
+.tabs-block__tabs{
+    display: flex;
+}
+.tabs-block__tab{
+    display: block;
+    height: 47px;
+    flex-grow: 1;
+    line-height: 47px;
+    text-align: center;
+    background-color: #c5cdd1;
+    margin-right: 1px;
+    color: #fff;
+    cursor: pointer;
+    &:last-of-type{
+        margin-right: 0;
+    }
+}
+.tabs-block__item{
+    display: none;
+    width: 100%;
+    height: 245px;
+    background-color: #fff;
+}
+@for $i from 1 through 5{
+  #tabs-block-radio-#{$i}:checked ~ .tabs-block__tabs [for="tabs-block-radio-#{$i}"]{
+    color: #475055;
+    background-color: #fff;
+  }
+  #tabs-block-radio-#{$i}:checked ~ .tabs-block__list .tabs-block__item_#{$i}{
+      display: block;
+  }
 }
