--- a/sass/blocks/newsletter-block.scss
+++ b/sass/blocks/newsletter-block.scss
@@ -39,4 +39,11 @@
     border: none;
     border-radius: 3px;
     outline: none;
+    transition: 0.3s;
+    &:hover{
+        box-shadow: 0 3px 10px 0 rgba(255,255,255, 0.3) inset;
+    }
+    &:active{
+        box-shadow: 0 3px 10px 0 rgba(0,0,0, 0.3) inset;
+    }
 }
