--- a/sass/blocks/question-block.scss
+++ b/sass/blocks/question-block.scss
@@ -37,4 +37,11 @@
     border-radius: 3px;
     border: none;
     outline: none;
+    transition: 0.3s;
+    &:hover{
+        box-shadow: 0 3px 10px 0 rgba(255,255,255, 0.3) inset;
+    }
+    &:active{
+        box-shadow: 0 3px 10px 0 rgba(0,0,0, 0.3) inset;
+    }
 }
