--- a/sass/blocks/search.scss
+++ b/sass/blocks/search.scss
@@ -6,4 +6,9 @@
     padding-left: 22px;
     padding-right: 22px;
     vertical-align: middle;
+    fill: #b2b9bd;
+    transition: 0.3s;
+    &:hover{
+        fill: #56ccc8;
+    }
 }
