--- a/sass/blocks/tabs-block.scss
+++ b/sass/blocks/tabs-block.scss
@@ -1,7 +1,6 @@
 .tabs-block{
     width: 100%;
     height: 292px;
-    outline: 1px solid yellow;
 }
 .tabs-block__radio{
     display: none;
@@ -19,6 +18,7 @@
     margin-right: 1px;
     color: #fff;
     cursor: pointer;
+    transition: 1s;
     &:last-of-type{
         margin-right: 0;
     }
@@ -28,6 +28,7 @@
     width: 100%;
     height: 245px;
     background-color: #fff;
+    transition: 0.5s;
 }
 @for $i from 1 through 5{
   #tabs-block-radio-#{$i}:checked ~ .tabs-block__tabs [for="tabs-block-radio-#{$i}"]{
